Fix build issues

--- a/jsoncpp/CMakeLists.txt
+++ b/jsoncpp/CMakeLists.txt
@@ -45,7 +45,7 @@ collect_sources(SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/lib_json")
 add_library(jsoncpp STATIC ${SOURCES})
 
 set(JSON_INCLUDE_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/include/json")
-set(JSON_LIB_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/lib/json")
+set(JSON_LIB_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/lib")
 
 FILE(GLOB INCLUDE_FILES "include/json/*.h")
 INSTALL(FILES ${INCLUDE_FILES} DESTINATION ${JSON_INCLUDE_INSTALL_PREFIX})
