Fix link logger dependencies

--- a/test_application/CMakeLists.txt
+++ b/test_application/CMakeLists.txt
@@ -38,6 +38,11 @@ add_executable(${PROJECT} main.cc)
 target_link_libraries( ${PROJECT}
     log4cxx -L$ENV{PREFIX}/lib
     jsoncpp -L$ENV{PREFIX}/lib
+    aprutil-1 -L$ENV{PREFIX}/lib
+    apr-1 -L$ENV{PREFIX}/lib
+    expat -L$ENV{PREFIX}/lib
+    expat -L$ENV{PREFIX}/lib
+    socket
 )
 
 target_include_directories(${PROJECT} PRIVATE  $ENV{PREFIX}/include)
