Continue setup qnx7 environment-CMAKE

--- a/test_application/CMakeLists.txt
+++ b/test_application/CMakeLists.txt
@@ -36,11 +36,11 @@ project (${PROJECT})
 add_executable(${PROJECT} main.cc)
 
 target_link_libraries( ${PROJECT}
-    log4cxx -L$ENV{PREFIX}/lib
+    # log4cxx -L$ENV{PREFIX}/lib
     jsoncpp -L$ENV{PREFIX}/lib
-    aprutil-1 -L$ENV{PREFIX}/lib
-    apr-1 -L$ENV{PREFIX}/lib
-    expat -L$ENV{PREFIX}/lib
+    # aprutil-1 -L$ENV{PREFIX}/lib
+    # apr-1 -L$ENV{PREFIX}/lib
+    # expat -L$ENV{PREFIX}/lib
 )
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL QNX)
